# pmu_apps

./: CMakeLists.txt  README.md  requirements.txt
qpmu/app/: CMakeLists.txt
qpmu/app/img/: .qrc
qpmu/app/src/: app.cpp  app.h  data_observer.cpp  data_observer.h  data_processor.cpp  data_processor.h  equally_scaled_axes_chart.cpp  equally_scaled_axes_chart.h  main.cpp  main_page_interface.h  main_window.cpp  main_window.h  phasor_monitor.cpp  phasor_monitor.h  settings_models.cpp  settings_models.h  settings_widget.cpp  settings_widget.h  util.cpp  util.h
qpmu/common/: CMakeLists.txt
qpmu/common/include/qpmu/: defs.h  util.h
qpmu/common/src/: util.cpp
qpmu/estimation/: CMakeLists.txt
qpmu/estimation/include/qpmu/: estimator.h
qpmu/estimation/src/: estimator.cpp  main.cpp
qpmu/sampling/: CMakeLists.txt
qpmu/sampling/data/: 120v_1000w.csv  120v_1200w.csv  120v_1500w.csv  120v_1800w.csv  120v_2000w.csv  120v_2100w.csv  120v_2400w.csv  120v_2700w.csv  120v_3000w.csv  120v_300w.csv  120v_600w.csv  120v_900w.csv  180v_1000w.csv  180v_1200w.csv  180v_1500w.csv  180v_1800w.csv  180v_2000w.csv  180v_2100w.csv  180v_2400w.csv  180v_2700w.csv  180v_3000w.csv  180v_300w.csv  180v_600w.csv  180v_900w.csv  240v_1000w.csv  240v_100w.csv  240v_1200w.csv  240v_1500w.csv  240v_1800w.csv  240v_2000w.csv  240v_200w.csv  240v_2100w.csv  240v_2400w.csv  240v_2700w.csv  240v_3000w.csv  240v_300w.csv  240v_400w.csv  240v_500w.csv  240v_600w.csv  240v_700w.csv  (+12 more)
qpmu/sampling/simulator/: gui.py  main.py  sampling.py
qpmu/sampling/src/: main.cpp
